# these-frame

./: .env  .gitignore  PROJECT_STATUS.md  README.md  TAURI_README.md  apipick_article.json  eslint.config.mjs  figma-skills.json  generate-manual.py  gh-repo.json  keepalive.sh  mendeley-api.json  next.config.ts  package.json  run-browser.sh  start.sh  stirling-pdf.json  vercel.json  worklog.md
db/: custom.db
prisma/: schema.prisma
scripts/: build-windows.bat  build-windows.sh  launch-desktop.bat  start-server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tool-results/: bash_1784564196630_2203e72d2229.txt  bash_1784567779931_3d0f38f36797.txt  bash_1784574601705_2cc686743e27.txt  bash_1784659032966_437190c98bd0.txt  bash_1784714297052_279e918d59b6.txt  bash_1784730783714_5664dcbac5fc.txt  bash_1784730878032_305b5a255ea1.txt  bash_1784730890623_a61c701953ae.txt  read_1784556707232_350e034acdd9.txt  read_1784556731960_95ea550eee00.txt  read_1784562726129_65f5fff1c19f.txt  read_1784562732152_fc5f2ef6c633.txt  read_1784562736611_c90b27e53d5d.txt  read_1784562741169_a8199ba2aa59.txt  read_1784562755710_4d958aa749b8.txt  read_1784562760457_8b74b56e0d4c.txt  read_1784566543894_d6fe0823c2bf.txt  read_1784566556435_017bb209bf91.txt  read_1784566568968_e8f422e9bffb.txt  read_1784568198529_d5505d45240b.txt  read_1784574503406_08e211ee1bc8.txt  read_1784632104878_218996b6c9e8.txt  read_1784636187131_e62beae6f2a8.txt  read_1784636226963_417d80578d89.txt  (+58 more)
upload/: articles.md  (+15 more)
(+64 files in other folders)
