[package]
name = "thesisframe"
version = "0.2.0"
description = "ThesisFrame — Aide à la rédaction de thèse"
authors = ["ThesisFrame"]
edition = "2021"

[lib]
name = "thesisframe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
